# my_rust

./: .gitignore  readme.md
book/chapter_02/: Cargo.toml
book/chapter_2/: run.sh
book/chapter_2/src/: demo.rs
books/ProgrammingRust/chapter_04/: Cargo.toml
books/ProgrammingRust/chapter_21/: Cargo.toml
books/rust_for_rustaceans/c-01/: Cargo.toml
books/rust_for_rustaceans/chapter_01/: Cargo.toml
crates/my_sqlite/: :memory  Cargo.toml
crates/my_sqlite/src/: main.rs
crates/sqlite/: Cargo.toml
crates/surreal/: Cargo.toml
crates/surreal/src/: main.rs
exercism/rust/space-age/: HELP.md
gui/pilot/: Cargo.toml
gui/pilot/src/: main.rs
practice/exercism/: readme.md
projects/tinyrenderer/: Cargo.toml
projects/tinyrenderer/src/: TGAImage.rs  main.rs  tga_image.rs
projects/tui/counter/: Cargo.toml
projects/tui/hello-ratatui/: Cargo.toml
rust_for_rustaceans/chapter_01/src/: lib.rs  lifetimes.rs
rustling/: Cargo.toml
rustling/src/: allergies.rs  boxy.rs  lifetimes.rs  lifetimes2.rs  luhn.rs  main.rs  main2.rs  minesweeper.rs  playground.rs  smartpointers.rs  smartpointers2.rs  some.rs  sublist.rs
rustling/src/book/: chapter2.rs  mod.rs
rustling/src/old/: lru.py  (+2 more)
smartpointers/toomanylists/: Cargo.toml
topics/: Cargo.toml
topics/examples/doubly_linked_list/: main.rs
topics/examples/dyndispatch/basics/: intro.rs
topics/examples/dyndispatch/yt1/: start.rs
topics/examples/lifetimes/: main.rs
topics/examples/result/yt1/: example.rs  example_anyhow.rs  fallible.rs  intro.rs
topics/src/: main.rs
tui/hello-ratatui/: Cargo.toml
(+63 files in other folders)
